I doubt it doubt call mechanic. Card pile remove card function setup.
3 new functions in i doubt it game manager which are associated with the doubting mechanic: Doubt check, doubt correct and doubt unsuccessful.
Just need to finish the doubt mechanic with tracking what card value should be played each turn.
New variables in the game manager: most recent played cards as an array of cards, and the current card value to play. This current value isnt fully setup yet.

New input action for calling doubt setup in player and in the i doubt it mapping context.
This input action calls the doubt function in the i doubt it game manager.

Remove card function in card pile which removes it from the card pile array. New parameter in function for removing card from pile in card dealer which is the pile to remove from which then calls this new function in the passed card pile.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -171,7 +171,7 @@ MRUItem1=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
-WorldPartitionRuntimeSpatialHash=
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 GeneralProjectSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 CryptoKeysSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 GameplayTagsSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
@@ -302,14 +302,14 @@ Deal Cards=PropertyWrapper.DefaultValueCategory.All Cards
 Deal Cards_4=PropertyWrapper.DefaultValueCategory.All Cards
 SceneComponent=
 BillboardComponent=PropertyWrapper.DefaultValueCategory.All Cards
-BP_I_Doubt_It_Game_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
-K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.All Cards
+BP_I_Doubt_It_Game_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 BPC_CurrentHand_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 End Game=PropertyWrapper.DefaultValueCategory.All Cards
 End Game_6=PropertyWrapper.DefaultValueCategory.All Cards
 BP_NPC_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 CapsuleComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-SkeletalMeshComponent=
+SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Character=PropertyWrapper.DefaultValueCategory.All Cards
 K2Node_BreakStruct=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 BP_Card_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
@@ -318,7 +318,7 @@ CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.All Cards
 BP_Player_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Check If Game Over=PropertyWrapper.DefaultValueCategory.All Cards
 Check If Game Over_6=PropertyWrapper.DefaultValueCategory.All Cards
-BP_Turn_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards
+BP_Turn_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 StaticMeshActor=PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 Setup Main Game=PropertyWrapper.DefaultValueCategory.All Cards
 Setup Main Game_2=PropertyWrapper.DefaultValueCategory.All Cards
@@ -333,12 +333,15 @@ StaticMeshComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapp
 BoxComponent=BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision
 K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/IA_Interact.IA_Interact,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/Card_Selection/IA_Select_Card.IA_Select_Card
-InputAction=
+InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/IA_Interact.IA_Interact,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/Card_Selection/IA_Select_Card.IA_Select_Card
 SphereComponent=PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision
 Set Current Playing Game=PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 TextRenderComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 K2Node_EnhancedInputAction=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 K2Node_InputDebugKey=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+Doubt Check=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+Doubt Check_7=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+Doubt Incorrect=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Shared_Game_Mechanics/Cards
@@ -1614,7 +1617,7 @@ Character="\"Object\" \"Object.Actor.Tags\" "
 Pawn="\"Object\" \"Object.Actor.Tags\" "
 BP_Card_C="\"Object\" "
 InstancedStaticMeshComponent="\"Object\" "
-BP_CardPile_C="\"Object\" \"Object.Default.CardsInPile\" \"Object.Actor.Tags\" "
+BP_CardPile_C="\"Object\" "
 PreviewMaterial="\"Object\" "
 Material="\"Object\" "
 MaterialInterface="\"Object\" "
@@ -1691,28 +1694,28 @@ LogVisualizerSettings="\"Object\" "
 LevelScriptBlueprint="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=DataTableEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
@@ -1724,33 +1727,34 @@ RecentAssetEditors=EnumEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=DataTableEditor
 None=======
-OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_CardPile.BP_CardPile
+OpenAssetsAtExit=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager
 OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/Player/Input/IMC/IMC_Rat_Screw.IMC_Rat_Screw
-OpenAssetsAtExit=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager.BP_Rat_Screw_Game_Manager
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer.BP_Card_Dealer
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_CardPile.BP_CardPile
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/DT_Cards.DT_Cards
+OpenAssetsAtExit=/Game/Player/Input/IMC/IMC_I_Doubt_It.IMC_I_Doubt_It
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem1=/Game/Player/Input/Actions/RatScrew/IA_Slap
-MRUItem2=/Game/Player/Input/IMC/IMC_Rat_Screw
-MRUItem3=/Game/Player/BP_Player
-MRUItem4=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
-MRUItem5=/Game/NPCs/BP_NPC
-MRUItem6=/Game/Player/Input/Actions/IA_End_Turn
-MRUItem7=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
-MRUItem8=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card
-MRUItem9=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem10=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem11=/Game/Shared_Game_Mechanics/BPI_Playing_Character
-MRUItem12=/Game/Player/Input/IMC/IMC_I_Doubt_It
-MRUItem13=/Game/Shared_Game_Mechanics/BPC_CurrentHand
-MRUItem14=/Game/Shared_Game_Mechanics/Cards/BPI_Card
-MRUItem15=/Game/Player/Input/IMC/IMC_Bar
-MRUItem16=/Game/Player/Input/Actions/Card_Selection/IA_Previous_Card
-MRUItem17=/Game/Player/Input/Actions/Card_Selection/IA_Next_Card
-MRUItem18=/Game/Shared_Game_Mechanics/Cards/DT_Cards
-MRUItem19=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
+MRUItem0=/Game/Player/Input/IMC/IMC_I_Doubt_It
+MRUItem1=/Game/Shared_Game_Mechanics/Cards/DT_Cards
+MRUItem2=/Game/Shared_Game_Mechanics/BPI_Playing_Character
+MRUItem3=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
+MRUItem4=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
+MRUItem5=/Game/Player/BP_Player
+MRUItem6=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem7=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem8=/Game/Player/Input/Actions/RatScrew/IA_Slap
+MRUItem9=/Game/Player/Input/IMC/IMC_Rat_Screw
+MRUItem10=/Game/NPCs/BP_NPC
+MRUItem11=/Game/Player/Input/Actions/IA_End_Turn
+MRUItem12=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem13=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card
+MRUItem14=/Game/Shared_Game_Mechanics/Cards/BP_Card
+MRUItem15=/Game/Shared_Game_Mechanics/BPC_CurrentHand
+MRUItem16=/Game/Shared_Game_Mechanics/Cards/BPI_Card
+MRUItem17=/Game/Player/Input/IMC/IMC_Bar
+MRUItem18=/Game/Player/Input/Actions/Card_Selection/IA_Previous_Card
+MRUItem19=/Game/Player/Input/Actions/Card_Selection/IA_Next_Card
 MRUItem20=/Game/Player/Input/IMC/IMC_Pool
 MRUItem21=/Game/Player/Input/IMC/IMC_Darts
 MRUItem22=/Game/Player/Input/IMC/IMC_Auction
@@ -3183,6 +3187,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/Control
 /Game/Player/Input/Actions/Card_Selection=(R=0.275528,G=0.167328,B=0.467784,A=1.000000)
 /Game/Player/Input/Actions/Bar_General=(R=1.000000,G=0.927083,B=0.927083,A=1.000000)
 /Game/Player/Input/Actions/RatScrew=(R=1.000000,G=0.000000,B=0.011317,A=1.000000)
+/Game/Player/Input/Actions/I_Doubt_It=(R=0.072971,G=0.309633,B=0.467784,A=1.000000)
 
 [PluginBrowser]
 InstalledPlugins=VisualStudioTools
