--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -290,7 +290,7 @@ PropertyWrapper=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.D
 BP_Card_Dealer_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 EdGraph=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-BP_Rat_Screw_Game_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards
+BP_Rat_Screw_Game_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 BP_CardPile_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
@@ -298,9 +298,9 @@ EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.All Cards
 K2Node=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Deal To Players=PropertyWrapper.DefaultValueCategory.All Cards
 Deal To Players_5=PropertyWrapper.DefaultValueCategory.All Cards
-Deal Cards=PropertyWrapper.DefaultValueCategory.All Cards
-Deal Cards_4=PropertyWrapper.DefaultValueCategory.All Cards
-SceneComponent=
+Deal Cards=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+Deal Cards_4=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+SceneComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 BillboardComponent=PropertyWrapper.DefaultValueCategory.All Cards
 BP_I_Doubt_It_Game_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
@@ -308,18 +308,18 @@ BPC_CurrentHand_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper
 End Game=PropertyWrapper.DefaultValueCategory.All Cards
 End Game_6=PropertyWrapper.DefaultValueCategory.All Cards
 BP_NPC_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-CapsuleComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+CapsuleComponent=
 SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Character=PropertyWrapper.DefaultValueCategory.All Cards
 K2Node_BreakStruct=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 BP_Card_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-Blueprint=PropertyWrapper.DefaultValueCategory.All Cards
+Blueprint=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.All Cards
 BP_Player_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Check If Game Over=PropertyWrapper.DefaultValueCategory.All Cards
 Check If Game Over_6=PropertyWrapper.DefaultValueCategory.All Cards
 BP_Turn_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-StaticMeshActor=PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
+StaticMeshActor=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Setup Main Game=PropertyWrapper.DefaultValueCategory.All Cards
 Setup Main Game_2=PropertyWrapper.DefaultValueCategory.All Cards
 Add Card To Pile=PropertyWrapper.DefaultValueCategory.All Cards
@@ -342,6 +342,7 @@ K2Node_InputDebugKey=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrap
 Doubt Check=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Doubt Check_7=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Doubt Incorrect=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+Actor=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Shared_Game_Mechanics/Cards
@@ -1465,7 +1466,7 @@ CharacterMovementComponent="\"Object\" "
 PawnMovementComponent="\"Object\" "
 NavMovementComponent="\"Object\" "
 MovementComponent="\"Object\" "
-Actor="\"Object\" "
+Actor="\"Object\" \"Object.Actor.Tags\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -1609,7 +1610,7 @@ EdGraphNode="\"Object\" "
 DataTable="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
 BPC_CurrentHand_C="\"Object\" "
-BP_Card_Dealer_C=
+BP_Card_Dealer_C="\"Object.All Cards\" "
 BillboardComponent="\"Object\" "
 K2Node_InputDebugKey="\"Object\" "
 BP_NPC_C="\"Object\" \"Object.Actor.Tags\" "
@@ -1617,7 +1618,7 @@ Character="\"Object\" \"Object.Actor.Tags\" "
 Pawn="\"Object\" \"Object.Actor.Tags\" "
 BP_Card_C="\"Object\" "
 InstancedStaticMeshComponent="\"Object\" "
-BP_CardPile_C="\"Object\" "
+BP_CardPile_C="\"Object\" \"Object.Actor.Tags\" "
 PreviewMaterial="\"Object\" "
 Material="\"Object\" "
 MaterialInterface="\"Object\" "
@@ -1630,7 +1631,7 @@ K2Node_StructMemberSet="\"Object\" "
 BoxComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 RecastNavMesh="\"Object.Display.TileGenerationDebug\" "
 NavigationData="\"Object.Display.TileGenerationDebug\" "
-BP_Player_C="\"Object\" \"Object.Actor.Tags\" "
+BP_Player_C="\"Object\" "
 InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[2]\" \"Object.Mappings.Mappings.Mappings[3]\" "
 SphereComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 ArrowComponent="\"Object\" "
@@ -1696,19 +1697,20 @@ LevelScriptBlueprint="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
@@ -1718,7 +1720,6 @@ RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1727,38 +1728,40 @@ RecentAssetEditors=EnumEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=DataTableEditor
 None=======
-OpenAssetsAtExit=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager
+OpenAssetsAtExit=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager.BP_Rat_Screw_Game_Manager
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager.BP_Turn_Manager
 OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer.BP_Card_Dealer
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/BPI_Playing_Character.BPI_Playing_Character
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_CardPile.BP_CardPile
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/DT_Cards.DT_Cards
-OpenAssetsAtExit=/Game/Player/Input/IMC/IMC_I_Doubt_It.IMC_I_Doubt_It
+OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
+OpenAssetsAtExit=/Game/Modes_Instances/Modes/GM_Bar.GM_Bar
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer.BP_Card_Dealer
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Player/Input/IMC/IMC_I_Doubt_It
-MRUItem1=/Game/Shared_Game_Mechanics/Cards/DT_Cards
-MRUItem2=/Game/Shared_Game_Mechanics/BPI_Playing_Character
+MRUItem0=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
+MRUItem1=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem2=/Game/NPCs/BP_NPC
 MRUItem3=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
-MRUItem4=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
+MRUItem4=/Game/Shared_Game_Mechanics/BPI_Playing_Character
 MRUItem5=/Game/Player/BP_Player
-MRUItem6=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem6=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
 MRUItem7=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem8=/Game/Player/Input/Actions/RatScrew/IA_Slap
-MRUItem9=/Game/Player/Input/IMC/IMC_Rat_Screw
-MRUItem10=/Game/NPCs/BP_NPC
-MRUItem11=/Game/Player/Input/Actions/IA_End_Turn
-MRUItem12=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
-MRUItem13=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card
-MRUItem14=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem15=/Game/Shared_Game_Mechanics/BPC_CurrentHand
-MRUItem16=/Game/Shared_Game_Mechanics/Cards/BPI_Card
-MRUItem17=/Game/Player/Input/IMC/IMC_Bar
-MRUItem18=/Game/Player/Input/Actions/Card_Selection/IA_Previous_Card
-MRUItem19=/Game/Player/Input/Actions/Card_Selection/IA_Next_Card
-MRUItem20=/Game/Player/Input/IMC/IMC_Pool
-MRUItem21=/Game/Player/Input/IMC/IMC_Darts
-MRUItem22=/Game/Player/Input/IMC/IMC_Auction
-MRUItem23=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem8=/Game/Player/Input/IMC/IMC_I_Doubt_It
+MRUItem9=/Game/Shared_Game_Mechanics/Cards/DT_Cards
+MRUItem10=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem11=/Game/Player/Input/Actions/RatScrew/IA_Slap
+MRUItem12=/Game/Player/Input/IMC/IMC_Rat_Screw
+MRUItem13=/Game/Player/Input/Actions/IA_End_Turn
+MRUItem14=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card
+MRUItem15=/Game/Shared_Game_Mechanics/Cards/BP_Card
+MRUItem16=/Game/Shared_Game_Mechanics/BPC_CurrentHand
+MRUItem17=/Game/Shared_Game_Mechanics/Cards/BPI_Card
+MRUItem18=/Game/Player/Input/IMC/IMC_Bar
+MRUItem19=/Game/Player/Input/Actions/Card_Selection/IA_Previous_Card
+MRUItem20=/Game/Player/Input/Actions/Card_Selection/IA_Next_Card
+MRUItem21=/Game/Player/Input/IMC/IMC_Pool
+MRUItem22=/Game/Player/Input/IMC/IMC_Darts
+MRUItem23=/Game/Player/Input/IMC/IMC_Auction
 MRUItem24=/Game/Shared_Game_Mechanics/Cards/M_Card_Test
 MRUItem25=/Game/Shared_Game_Mechanics/Enum_All_Game_Names
 MRUItem26=/Engine/EditorBlueprintResources/StandardMacros
@@ -3006,6 +3009,7 @@ LevelScriptBlueprint.ClassOptions=True
 LevelScriptBlueprint.BlueprintOptions=True
 LevelScriptBlueprint.Imports=True
 LevelScriptBlueprint.Interfaces=True
+Actor.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
@@ -3337,6 +3341,7 @@ LastLogListing=PIE
 
 [PlacementMode]
 RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/BP_CardPile.BP_CardPile;
+RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 RecentlyPlaced=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager.BP_Turn_Manager;
 RecentlyPlaced=/Game/NPCs/BP_NPC.BP_NPC;
 RecentlyPlaced=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager.BP_Auction_Game_Manager;
@@ -3355,7 +3360,6 @@ RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_SPADES_Q.PL
 RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_SPADES_K.PLACEHOLDERS_SPADES_K;
 RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_SPADES_J.PLACEHOLDERS_SPADES_J;
 RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_SPADES_A.PLACEHOLDERS_SPADES_A;
-RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_SPADES_10.PLACEHOLDERS_SPADES_10;
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
