Fixed a crash with dealing cards. Reset selected cards function in current hand component.
Only adding to the player cards array in the card dealer if they aren't already in the player cards array.

New function in current hand component to clear the selected cards array which is called in the end player turn function in the I doubt it game manager.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -324,7 +324,7 @@ Setup Main Game=PropertyWrapper.DefaultValueCategory.All Cards
 Setup Main Game_2=PropertyWrapper.DefaultValueCategory.All Cards
 Add Card To Pile=PropertyWrapper.DefaultValueCategory.All Cards
 GM_Bar_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-End Player Turn=PropertyWrapper.DefaultValueCategory.All Cards
+End Player Turn=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 AddCard=PropertyWrapper.DefaultValueCategory.All Cards
 AddCard_1=PropertyWrapper.DefaultValueCategory.All Cards
 Start First Turn=PropertyWrapper.DefaultValueCategory.All Cards
@@ -1610,7 +1610,7 @@ EdGraphNode="\"Object\" "
 DataTable="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
 BPC_CurrentHand_C="\"Object\" "
-BP_Card_Dealer_C="\"Object.All Cards\" "
+BP_Card_Dealer_C=
 BillboardComponent="\"Object\" "
 K2Node_InputDebugKey="\"Object\" "
 BP_NPC_C="\"Object\" \"Object.Actor.Tags\" "
@@ -1704,16 +1704,16 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
@@ -1728,33 +1728,28 @@ RecentAssetEditors=EnumEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=DataTableEditor
 None=======
-OpenAssetsAtExit=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager.BP_Rat_Screw_Game_Manager
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager.BP_Turn_Manager
-OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/BPI_Playing_Character.BPI_Playing_Character
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_CardPile.BP_CardPile
-OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
-OpenAssetsAtExit=/Game/Modes_Instances/Modes/GM_Bar.GM_Bar
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/BPC_CurrentHand.BPC_CurrentHand
+OpenAssetsAtExit=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer.BP_Card_Dealer
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
-MRUItem1=/Game/Modes_Instances/Modes/GM_Bar
-MRUItem2=/Game/NPCs/BP_NPC
-MRUItem3=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
-MRUItem4=/Game/Shared_Game_Mechanics/BPI_Playing_Character
-MRUItem5=/Game/Player/BP_Player
-MRUItem6=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
-MRUItem7=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem8=/Game/Player/Input/IMC/IMC_I_Doubt_It
-MRUItem9=/Game/Shared_Game_Mechanics/Cards/DT_Cards
-MRUItem10=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem11=/Game/Player/Input/Actions/RatScrew/IA_Slap
-MRUItem12=/Game/Player/Input/IMC/IMC_Rat_Screw
-MRUItem13=/Game/Player/Input/Actions/IA_End_Turn
-MRUItem14=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card
-MRUItem15=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem16=/Game/Shared_Game_Mechanics/BPC_CurrentHand
+MRUItem1=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem2=/Game/Shared_Game_Mechanics/BPC_CurrentHand
+MRUItem3=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem4=/Game/NPCs/BP_NPC
+MRUItem5=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
+MRUItem6=/Game/Shared_Game_Mechanics/BPI_Playing_Character
+MRUItem7=/Game/Player/BP_Player
+MRUItem8=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem9=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem10=/Game/Player/Input/IMC/IMC_I_Doubt_It
+MRUItem11=/Game/Shared_Game_Mechanics/Cards/DT_Cards
+MRUItem12=/Game/Player/Input/Actions/RatScrew/IA_Slap
+MRUItem13=/Game/Player/Input/IMC/IMC_Rat_Screw
+MRUItem14=/Game/Player/Input/Actions/IA_End_Turn
+MRUItem15=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card
+MRUItem16=/Game/Shared_Game_Mechanics/Cards/BP_Card
 MRUItem17=/Game/Shared_Game_Mechanics/Cards/BPI_Card
 MRUItem18=/Game/Player/Input/IMC/IMC_Bar
 MRUItem19=/Game/Player/Input/Actions/Card_Selection/IA_Previous_Card
@@ -3010,6 +3005,7 @@ LevelScriptBlueprint.BlueprintOptions=True
 LevelScriptBlueprint.Imports=True
 LevelScriptBlueprint.Interfaces=True
 Actor.Actor=True
+BP_I_Doubt_It_Game_Manager_C.Default=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
