--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -124,7 +124,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1914,Y=1040)
 LastExecutedLaunchDevice=Windows@WINDOWS-LKPMU37
 LastExecutedLaunchName=WINDOWS-LKPMU37
 LastExecutedPIEPreviewDevice=
@@ -132,6 +132,7 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowWidth=1914
 NewWindowHeight=1040
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 MultipleInstancePositions=(X=0,Y=0)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -1702,8 +1703,8 @@ SplineComponent="\"Object\" "
 CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
@@ -1736,33 +1737,34 @@ OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card.BP_Card
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/BPC_CurrentHand.BPC_CurrentHand
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer.BP_Card_Dealer
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BPI_Card.BPI_Card
 OpenAssetsAtExit=/Game/Player/Input/IMC/IMC_I_Doubt_It.IMC_I_Doubt_It
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Player/Input/IMC/IMC_I_Doubt_It
-MRUItem1=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card_w_Mouse
-MRUItem2=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem3=/Game/Player/Input/IMC/IMC_Auction
-MRUItem4=/Game/Player/Input/Actions/Card_Selection/IA_Lock_Camera
-MRUItem5=/Game/Player/Input/Actions/Card_Selection/IA_Previous_Card
-MRUItem6=/Game/Player/Input/Actions/Card_Selection/IA_Next_Card
-MRUItem7=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
-MRUItem8=/Game/Shared_Game_Mechanics/BPC_CurrentHand
-MRUItem9=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem10=/Game/Player/BP_Player
-MRUItem11=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem12=/Game/Modes_Instances/Modes/GM_Bar
-MRUItem13=/Game/NPCs/BP_NPC
-MRUItem14=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
-MRUItem15=/Game/Shared_Game_Mechanics/BPI_Playing_Character
-MRUItem16=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
-MRUItem17=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem18=/Game/Shared_Game_Mechanics/Cards/DT_Cards
-MRUItem19=/Game/Player/Input/Actions/RatScrew/IA_Slap
-MRUItem20=/Game/Player/Input/IMC/IMC_Rat_Screw
-MRUItem21=/Game/Player/Input/Actions/IA_End_Turn
-MRUItem22=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card
-MRUItem23=/Game/Shared_Game_Mechanics/Cards/BPI_Card
+MRUItem0=/Game/Shared_Game_Mechanics/Cards/BPI_Card
+MRUItem1=/Game/Player/Input/IMC/IMC_I_Doubt_It
+MRUItem2=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card_w_Mouse
+MRUItem3=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem4=/Game/Player/Input/IMC/IMC_Auction
+MRUItem5=/Game/Player/Input/Actions/Card_Selection/IA_Lock_Camera
+MRUItem6=/Game/Player/Input/Actions/Card_Selection/IA_Previous_Card
+MRUItem7=/Game/Player/Input/Actions/Card_Selection/IA_Next_Card
+MRUItem8=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
+MRUItem9=/Game/Shared_Game_Mechanics/BPC_CurrentHand
+MRUItem10=/Game/Shared_Game_Mechanics/Cards/BP_Card
+MRUItem11=/Game/Player/BP_Player
+MRUItem12=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem13=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem14=/Game/NPCs/BP_NPC
+MRUItem15=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
+MRUItem16=/Game/Shared_Game_Mechanics/BPI_Playing_Character
+MRUItem17=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem18=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem19=/Game/Shared_Game_Mechanics/Cards/DT_Cards
+MRUItem20=/Game/Player/Input/Actions/RatScrew/IA_Slap
+MRUItem21=/Game/Player/Input/IMC/IMC_Rat_Screw
+MRUItem22=/Game/Player/Input/Actions/IA_End_Turn
+MRUItem23=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card
 MRUItem24=/Game/Player/Input/IMC/IMC_Bar
 MRUItem25=/Game/Player/Input/IMC/IMC_Pool
 MRUItem26=/Game/Player/Input/IMC/IMC_Darts
