--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -124,7 +124,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1914,Y=1040)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=Windows@WINDOWS-LKPMU37
 LastExecutedLaunchName=WINDOWS-LKPMU37
 LastExecutedPIEPreviewDevice=
@@ -132,7 +132,6 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowWidth=1914
 NewWindowHeight=1040
-LastExecutedPlayModeType=PlayMode_InEditorFloating
 MultipleInstancePositions=(X=0,Y=0)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -308,7 +307,7 @@ BPC_CurrentHand_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper
 End Game=PropertyWrapper.DefaultValueCategory.All Cards
 End Game_6=PropertyWrapper.DefaultValueCategory.All Cards
 BP_NPC_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-CapsuleComponent=
+CapsuleComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Character=PropertyWrapper.DefaultValueCategory.All Cards
 K2Node_BreakStruct=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
@@ -347,6 +346,8 @@ SplineComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.D
 CameraComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 PlayerController=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Hover Check=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+Sort Current Hand=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+Sort Current Hand_7=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Shared_Game_Mechanics/Cards
@@ -1458,7 +1459,7 @@ WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
 SpringArmComponent="\"Object\" "
 SceneComponent="\"Object\" "
-ActorComponent="\"Object\" "
+ActorComponent="\"Object\" \"Object.Default.Current Hand\" "
 CameraComponent="\"Object\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
@@ -1613,7 +1614,7 @@ K2Node="\"Object\" "
 EdGraphNode="\"Object\" "
 DataTable="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
-BPC_CurrentHand_C="\"Object\" "
+BPC_CurrentHand_C="\"Object\" \"Object.Default.Current Hand\" "
 BP_Card_Dealer_C=
 BillboardComponent="\"Object\" "
 K2Node_InputDebugKey="\"Object\" "
@@ -1636,7 +1637,7 @@ BoxComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 RecastNavMesh="\"Object.Display.TileGenerationDebug\" "
 NavigationData="\"Object.Display.TileGenerationDebug\" "
 BP_Player_C="\"Object\" "
-InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[7]\" \"Object.Mappings.Mappings.Mappings[8]\" "
+InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[7]\" \"Object.Mappings.Mappings.Mappings[8]\" \"Object.Mappings.Mappings.Mappings[9]\" "
 SphereComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 ArrowComponent="\"Object\" "
 TextRenderComponent="\"Object\" "
@@ -1702,15 +1703,16 @@ SplineComponent="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1731,46 +1733,42 @@ RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=EnumEditor
 None=======
 OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card.BP_Card
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/BPC_CurrentHand.BPC_CurrentHand
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer.BP_Card_Dealer
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BPI_Card.BPI_Card
 OpenAssetsAtExit=/Game/Player/Input/IMC/IMC_I_Doubt_It.IMC_I_Doubt_It
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/BPC_CurrentHand.BPC_CurrentHand
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Shared_Game_Mechanics/Cards/BPI_Card
-MRUItem1=/Game/Player/Input/IMC/IMC_I_Doubt_It
-MRUItem2=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card_w_Mouse
-MRUItem3=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem4=/Game/Player/Input/IMC/IMC_Auction
-MRUItem5=/Game/Player/Input/Actions/Card_Selection/IA_Lock_Camera
-MRUItem6=/Game/Player/Input/Actions/Card_Selection/IA_Previous_Card
-MRUItem7=/Game/Player/Input/Actions/Card_Selection/IA_Next_Card
-MRUItem8=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
-MRUItem9=/Game/Shared_Game_Mechanics/BPC_CurrentHand
-MRUItem10=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem11=/Game/Player/BP_Player
-MRUItem12=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem13=/Game/Modes_Instances/Modes/GM_Bar
-MRUItem14=/Game/NPCs/BP_NPC
-MRUItem15=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
-MRUItem16=/Game/Shared_Game_Mechanics/BPI_Playing_Character
-MRUItem17=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
-MRUItem18=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem19=/Game/Shared_Game_Mechanics/Cards/DT_Cards
-MRUItem20=/Game/Player/Input/Actions/RatScrew/IA_Slap
-MRUItem21=/Game/Player/Input/IMC/IMC_Rat_Screw
-MRUItem22=/Game/Player/Input/Actions/IA_End_Turn
-MRUItem23=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card
-MRUItem24=/Game/Player/Input/IMC/IMC_Bar
-MRUItem25=/Game/Player/Input/IMC/IMC_Pool
-MRUItem26=/Game/Player/Input/IMC/IMC_Darts
-MRUItem27=/Game/Shared_Game_Mechanics/Cards/M_Card_Test
-MRUItem28=/Game/Shared_Game_Mechanics/Enum_All_Game_Names
-MRUItem29=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
+MRUItem0=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Sort_Methods
+MRUItem1=/Game/Shared_Game_Mechanics/BPC_CurrentHand
+MRUItem2=/Game/Player/Input/IMC/IMC_I_Doubt_It
+MRUItem3=/Game/Player/Input/Actions/Card_Selection/IA_Sort_Cards
+MRUItem4=/Game/Player/BP_Player
+MRUItem5=/Game/Shared_Game_Mechanics/Cards/BPI_Card
+MRUItem6=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card_w_Mouse
+MRUItem7=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem8=/Game/Player/Input/IMC/IMC_Auction
+MRUItem9=/Game/Player/Input/Actions/Card_Selection/IA_Lock_Camera
+MRUItem10=/Game/Player/Input/Actions/Card_Selection/IA_Previous_Card
+MRUItem11=/Game/Player/Input/Actions/Card_Selection/IA_Next_Card
+MRUItem12=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
+MRUItem13=/Game/Shared_Game_Mechanics/Cards/BP_Card
+MRUItem14=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem15=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem16=/Game/NPCs/BP_NPC
+MRUItem17=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
+MRUItem18=/Game/Shared_Game_Mechanics/BPI_Playing_Character
+MRUItem19=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem20=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem21=/Game/Shared_Game_Mechanics/Cards/DT_Cards
+MRUItem22=/Game/Player/Input/Actions/RatScrew/IA_Slap
+MRUItem23=/Game/Player/Input/IMC/IMC_Rat_Screw
+MRUItem24=/Game/Player/Input/Actions/IA_End_Turn
+MRUItem25=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card
+MRUItem26=/Game/Player/Input/IMC/IMC_Bar
+MRUItem27=/Game/Player/Input/IMC/IMC_Pool
+MRUItem28=/Game/Player/Input/IMC/IMC_Darts
+MRUItem29=/Game/Shared_Game_Mechanics/Cards/M_Card_Test
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -2202,6 +2200,7 @@ TextureImportSettings.VirtualTextures=True
 TextureImportSettings.ImportSettings=True
 UMGEditorProjectSettings.Compiler=True
 UMGEditorProjectSettings.Class Filtering=True
+UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
@@ -3031,7 +3030,6 @@ SplineComponent.Cooking=True
 SplineComponent.Events=True
 BP_Card_C.Hovering and Selecting=True
 BP_Card_C.Card Shaking=True
-UMGEditorProjectSettings.Designer =True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
@@ -3073,6 +3071,7 @@ None=======
 /Game/Maps/ThirdPersonMap.ThirdPersonMap:PersistentLevel.ThirdPersonMap=1
 /Game/Player/Input/Actions/Card_Selection/IA_Lock_Camera.IA_Lock_Camera=1
 /Game/Player/Input/Actions/Card_Selection/IA_Select_Card_w_Mouse.IA_Select_Card_w_Mouse=1
+/Game/Player/Input/Actions/Card_Selection/IA_Sort_Cards.IA_Sort_Cards=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
