--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -125,7 +125,7 @@ AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
 LastSize=(X=0,Y=0)
-LastSize=(X=0,Y=0)
+LastSize=(X=1914,Y=1040)
 None=======
 None=======
 LastExecutedLaunchDevice=Windows@WINDOWS-LKPMU37
@@ -136,6 +136,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowWidth=1914
 NewWindowHeight=1040
 NewWindowHeight=1040
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 MultipleInstancePositions=(X=0,Y=0)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -354,7 +355,7 @@ Sort Current Hand=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper
 Sort Current Hand_7=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Main_Game_Managers/Rat_Screw
+ContentBrowserTab1.SelectedPaths=/Game/Player/Input/Actions/Card_Selection
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -1460,7 +1461,7 @@ DataTableEditor.LastCompileMethod=Unknown
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Action.Triggers\" \"Object.Action.Triggers.Triggers[0]\" "
+Object="\"Object\" "
 SpringArmComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
@@ -1712,6 +1713,10 @@ DebuggerAttached=False
 None=======
 None=======
 None=======
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1726,11 +1731,7 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -1749,30 +1750,34 @@ OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card.BP_Card
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BPI_Card.BPI_Card
 OpenAssetsAtExit=/Game/Player/Input/Actions/Card_Selection/IA_Next_Card.IA_Next_Card
 OpenAssetsAtExit=/Game/Player/Input/Actions/Card_Selection/IA_Previous_Card.IA_Previous_Card
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager.BP_Turn_Manager
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer.BP_Card_Dealer
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_CardPile.BP_CardPile
+OpenAssetsAtExit=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Player/Input/Actions/Card_Selection/IA_Previous_Card
-MRUItem1=/Game/Player/Input/Actions/Card_Selection/IA_Next_Card
-MRUItem2=/Game/Shared_Game_Mechanics/Cards/BPI_Card
-MRUItem3=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem4=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Sort_Methods
-MRUItem5=/Game/Shared_Game_Mechanics/BPC_CurrentHand
-MRUItem6=/Game/Player/Input/IMC/IMC_I_Doubt_It
-MRUItem7=/Game/Player/BP_Player
-MRUItem8=/Game/Main_Game_Managers/Rat_Screw/Enum_RatScrewPlayers
-MRUItem9=/Game/Player/Input/IMC/IMC_Rat_Screw
-MRUItem10=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem11=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card_w_Mouse
-MRUItem12=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem13=/Game/Player/Input/IMC/IMC_Auction
-MRUItem14=/Game/Player/Input/Actions/Card_Selection/IA_Lock_Camera
-MRUItem15=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
-MRUItem16=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem17=/Game/Modes_Instances/Modes/GM_Bar
-MRUItem18=/Game/NPCs/BP_NPC
-MRUItem19=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
-MRUItem20=/Game/Shared_Game_Mechanics/BPI_Playing_Character
-MRUItem21=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem0=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem1=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
+MRUItem2=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
+MRUItem3=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem4=/Game/Player/Input/Actions/Card_Selection/IA_Previous_Card
+MRUItem5=/Game/Player/Input/Actions/Card_Selection/IA_Next_Card
+MRUItem6=/Game/Shared_Game_Mechanics/Cards/BPI_Card
+MRUItem7=/Game/Shared_Game_Mechanics/Cards/BP_Card
+MRUItem8=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Sort_Methods
+MRUItem9=/Game/Shared_Game_Mechanics/BPC_CurrentHand
+MRUItem10=/Game/Player/Input/IMC/IMC_I_Doubt_It
+MRUItem11=/Game/Player/BP_Player
+MRUItem12=/Game/Main_Game_Managers/Rat_Screw/Enum_RatScrewPlayers
+MRUItem13=/Game/Player/Input/IMC/IMC_Rat_Screw
+MRUItem14=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem15=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card_w_Mouse
+MRUItem16=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem17=/Game/Player/Input/IMC/IMC_Auction
+MRUItem18=/Game/Player/Input/Actions/Card_Selection/IA_Lock_Camera
+MRUItem19=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem20=/Game/NPCs/BP_NPC
+MRUItem21=/Game/Shared_Game_Mechanics/BPI_Playing_Character
 MRUItem22=/Game/Shared_Game_Mechanics/Cards/DT_Cards
 MRUItem23=/Game/Player/Input/Actions/RatScrew/IA_Slap
 MRUItem24=/Game/Player/Input/Actions/IA_End_Turn
