Plugging in a missing wall material

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1544,6 +1544,9 @@ MaterialExpressionTextureCoordinate="\"Object\" "
 MaterialExpressionLandscapePhysicalMaterialOutput="\"Object\" "
 MaterialExpressionCustomOutput="\"Object\" "
 MaterialExpressionLandscapeLayerBlend="\"Object\" "
+StaticMesh="\"Object\" "
+StreamableRenderAsset="\"Object\" "
+AssetViewerSettings="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -1552,12 +1555,14 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+OpenAssetsAtExit=/Game/Environment/Bar_Assets/Models/SM_Wall_01.SM_Wall_01
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/StarterContent/Materials/M_Ground_Grass1
-MRUItem1=/Game/Environment/FirstPerson/Maps/FirstPersonMap
-MRUItem2=/Game/Modes_Instances/Modes/GM_Bar
-MRUItem3=/Game/Player/BP_Player
+MRUItem0=/Game/Environment/Bar_Assets/Models/SM_Wall_01
+MRUItem1=/Game/StarterContent/Materials/M_Ground_Grass1
+MRUItem2=/Game/Environment/FirstPerson/Maps/FirstPersonMap
+MRUItem3=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem4=/Game/Player/BP_Player
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
