Card Pile stack amount and random rotation deviation. Pile cards fixes and rat screw pile fixes. Card dealer fixes.
Card pile new variables: stack amount and random rotation deviation.
Stack amount is the space between the cards when they are stacked.
The random rotation deviation is the amount to randomly rotate each card in the card pile. This is done by dividing it by 2 and then getting a random float between the negative version of the half and the positive version of the half and then add that to the z rotation of the pile itself to set the card's rotation.

Pile card fixes via card dealer fixes:
Add card to pile array now only if card is not already in the pile cards array.
Rat screw manager now stores the card to play in the play card function as a local variable since it will get changed after calling the remove card from pile function so this was causing issues with card transfers between piles.
Then this local variable is used for the add card to pile function in this play card function in the screw game manager.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -289,11 +289,11 @@ UdpMessagingSettings=EnhancedInputDeveloperSettings.Modifier Default Values.Inpu
 WmfMediaSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 UserDefinedStruct=
 Struct_Card=
-PropertyWrapper=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-BP_Card_Dealer_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
+BP_Card_Dealer_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 EdGraph=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-BP_Rat_Screw_Game_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
+BP_Rat_Screw_Game_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 BP_CardPile_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
@@ -353,7 +353,7 @@ K2Node_InputDebugKey=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrap
 Doubt Check=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Doubt Check_7=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Doubt Incorrect=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-Actor=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+Actor=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 SplineComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 CameraComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 PlayerController=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
@@ -372,6 +372,9 @@ BP_Auction_Game_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards,Propert
 Deal Shared Pile=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Deal Shared Pile_8=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Slap _7=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+EdGraphNode=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
+PlayCard=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
+PlayCard_6=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties,StaticMeshComponent.Collision.Collision
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Player/Input/IMC
@@ -1645,7 +1648,7 @@ EdGraphNode="\"Object\" "
 DataTable="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
 BPC_CurrentHand_C="\"Object\" "
-BP_Card_Dealer_C=
+BP_Card_Dealer_C="\"Object.Default.Pile Cards\" "
 BillboardComponent="\"Object\" "
 K2Node_InputDebugKey="\"Object\" "
 BP_NPC_C="\"Object\" \"Object.Actor.Tags\" "
@@ -1661,7 +1664,7 @@ None=======
 None=======
 None=======
 InstancedStaticMeshComponent="\"Object\" "
-BP_CardPile_C="\"Object\" \"Object.Default.CardsInPile\" "
+BP_CardPile_C="\"Object\" \"Object.Actor.Tags\" "
 PreviewMaterial="\"Object\" "
 Material="\"Object\" "
 MaterialInterface="\"Object\" "
@@ -1759,6 +1762,7 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
@@ -1783,23 +1787,20 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=
-OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_CardPile.BP_CardPile
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/BPI_Playing_Character.BPI_Playing_Character
 OpenAssetsAtExit=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager.BP_Rat_Screw_Game_Manager
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager.BP_Turn_Manager
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer.BP_Card_Dealer
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_CardPile.BP_CardPile
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
-MRUItem1=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem2=/Game/Shared_Game_Mechanics/BPI_Playing_Character
-MRUItem3=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
-MRUItem4=/Game/Player/BP_Player
-MRUItem5=/Game/Player/Input/IMC/IMC_Rat_Screw
-MRUItem6=/Game/UI/Non_Diegetic/WBP_On_Screen_Text
-MRUItem7=/Game/NPCs/BP_NPC
-MRUItem8=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
+MRUItem0=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
+MRUItem1=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
+MRUItem2=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem3=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem4=/Game/Shared_Game_Mechanics/BPI_Playing_Character
+MRUItem5=/Game/Player/BP_Player
+MRUItem6=/Game/Player/Input/IMC/IMC_Rat_Screw
+MRUItem7=/Game/UI/Non_Diegetic/WBP_On_Screen_Text
+MRUItem8=/Game/NPCs/BP_NPC
 MRUItem9=/Game/Player/Input/IMC/IMC_I_Doubt_It
 MRUItem10=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
 MRUItem11=/Game/Player/Input/Actions/Card_Selection/IA_Previous_Card
